WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212545
Elements with wheel event handlers inside overflow:scroll are missing from the event region
https://bugs.webkit.org/show_bug.cgi?id=212545
Summary
Elements with wheel event handlers inside overflow:scroll are missing from th...
Simon Fraser (smfr)
Reported
2020-05-29 14:05:28 PDT
Elements with wheel event handlers inside overflow:scroll are missing from the event region
Attachments
Patch
(7.95 KB, patch)
2020-05-29 14:08 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-29 14:08:05 PDT
Created
attachment 400612
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-29 21:49:42 PDT
https://trac.webkit.org/changeset/262336/webkit
Ahmad Saleem
Comment 3
2022-10-10 14:41:50 PDT
Landed and didn't backed out:
https://github.com/WebKit/WebKit/commit/c8177c7b71e1ac9f7faa0a7c4f8e0be0ba4f52c6
Marking this as "RESOLVED FIXED". Thanks!
Radar WebKit Bug Importer
Comment 4
2022-10-10 14:42:19 PDT
<
rdar://problem/100998182
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug