Elements with wheel event handlers inside overflow:scroll are missing from the event region https://bugs.webkit.org/show_bug.cgi?id=212545

Reviewed by Zalan Bujtas.

Source/WebCore:

RenderBlock::paintObject() needs to traverse into descendants if there are are
wheel event handlers on the document, just as it does for elements with touch-action.

Test: fast/scrolling/mac/wheel-event-listener-region-inside-overflow-scroll.html

* dom/Document.h:
(WebCore::Document::hasTouchEventHandlers const):
(WebCore::Document::hasWheelEventHandlers const):
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintObject):

LayoutTests:

* fast/scrolling/mac/wheel-event-listener-region-inside-overflow-scroll-expected.txt: Added.
* fast/scrolling/mac/wheel-event-listener-region-inside-overflow-scroll.html: Added.

Canonical link: https://commits.webkit.org/225384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262336 268f45cc-cd09-0410-ab3c-d52691b4dbfc